# ATENEA-IRIS

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  package.json
src/backend/: main.mo
src/internet_identity_middleware/: .babelrc  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  webpack.config.js
src/internet_identity_middleware/public/: index.html
src/internet_identity_middleware/src/: App.tsx  index.tsx
src/internet_identity_middleware/src/components/: LoginButton.tsx  RedirectButton.tsx
src/internet_identity_middleware/src/context/: AuthContext.tsx
src/network/: Cargo.toml  network.did
src/network/src/: data.rs  lib.rs
src/nlp/: Cargo.toml  nlp.did
src/nlp/src/: lib.rs
src/qrcode/: Cargo.toml
src/react-dashboard/: package.json
src/react-dashboard/src/: App.jsx
src/react-dashboard/src/components/: barra.tsx  piePagina.tsx
src/react-dashboard/src/context/: AuthContext.jsx
src/react-dashboard/src/screens/: Historial.tsx  Riesgo.tsx  blockchain.tsx  index.tsx  qrcode.tsx
src/react-native-app/: app.json  index.js  package.json  tailwind.config.js
src/react-native-app/src/: App.jsx
src/react-native-app/src/canisters/: backend.ts  index.ts
src/react-native-app/src/components/Home/: Categories.tsx  Header.tsx  Logo.tsx  Report.tsx  SearchInput.tsx
src/react-native-app/src/screens/: _layout.tsx  qrcode.tsx
src/tunnel/: package.json  tsconfig.json
src/vectordb/: Cargo.toml  vectordb.did
src/vectordb/src/: lib.rs
src/vectordb/src/database/: collection.rs  db.rs  error.rs  mod.rs  users.rs
(+6 files in other folders)
