[package]
name = "qrcode"
version = "0.1.0"
edition = "2021"

[lib]
name = "qrcode"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
candid = "0.10"
colorgrad = "0.6"
ic-cdk = "0.16.0"
image = { version = "0.24.9", features = ["png"], default-features = false }
qrcode-generator = "4.1"
serde = { version = "1.0", features = ["derive"] }
